--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,42 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <h1>melissa</h1>
+    <nav class="navbar  navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Brand</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+            <li><a href="#">Link</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <section>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-xs-3">
+            <img src="assets/images/tienda.png" alt="online">
+          </div>
+          <div class="col-xs-6 col-xs-offset-3">
+              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Ingresa lo que quieres comprar">
+               <button type="submit" class="btn btn-default">Send</button>
+
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+
 
 
     <script type="text/javascript" src="vendors/js/jquery-3.2.1.min.js"></script>
