--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPA</title>
-    <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
     <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
@@ -35,9 +35,17 @@
             <img src="assets/images/tienda.png" alt="online">
           </div>
           <div class="col-xs-6 col-xs-offset-3">
-              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Ingresa lo que quieres comprar">
-               <button type="submit" class="btn btn-default">Send</button>
-
+            <input type="email" class="form-control" id="search" placeholder="Ingresa lo que quieres comprar:sandalia">
+            <button type="submit" class="btn btn-default" id="send">Send</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="row">
+        <div class="col-xs-12 col-md-6">
+          <div class="" id="section-items">
+<img src="" alt="">
           </div>
 
         </div>
