--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,80 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SPA</title>
-    <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
-    <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/main.css">
-  </head>
-  <body>
-    <h1>melissa</h1>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SPA</title>
+  <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
+  <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css">
+</head>
 
-    <script type="text/javascript" src="vendors/js/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="vendors/bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-  </body>
+<body>
+  <nav class="navbar navbar-inverse">
+    <a class="navbar-brand" href="#">Tienda Online</a>
+  </nav>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-6">
+        hola
+      <div class="col-xs-6">
+        hola
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12">
+       <!--  ...  -->
+      </div>
+    </div>
+  </div>
+
+<!-- ...........footer................ -->
+<footer class="footer-bs">
+    <div class="row">
+      <div class="col-md-5 footer-brand animated fadeInLeft">
+          <h2>Logo</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet corrupti nemo perferendis, nobis eos veritatis debitis deserunt consequatur consequuntur, qui velit. Assumenda commodi sint dolorum qui dignissimos impedit, quasi voluptate.Consequatur delectus cum veniam non, soluta nihil debitis ipsam sint et? Esse, ullam delectus. Dignissimos itaque eius nihil minima pariatur laboriosam optio saepe, officiis, velit at adipisci reprehenderit voluptas commodi.</p>
+            <p>© 2018 Todos los derechos reservados</p>
+        </div>
+      <div class="col-md-5 footer-nav animated fadeInUp">
+          <h4>Menu —</h4>
+          <div class="col-md-6">
+                <ul class="pages">
+                    <li><a href="#">Lo ùltimo</a></li>
+                    <li><a href="#">Moda</a></li>
+                    <li><a href="#">Tecnologìa</a></li>
+                    <li><a href="#">Artìculos de colecciòn y arte</a></li>
+                    <li><a href="#">...</a></li>
+                </ul>
+            </div>
+          <div class="col-md-6">
+                <ul class="list">
+                    <li><a href="#">Sobre Nosotros</a></li>
+                    <li><a href="#">Contactos</a></li>
+                    <li><a href="#">Terminos & Condiciones</a></li>
+                    <li><a href="#">Polìtica de Privacidad</a></li>
+                </ul>
+            </div>
+        </div>
+      <div class="col-md-2 footer-social animated fadeInDown">
+          <h4>Síguenos</h4>
+          <ul>
+              <li><a href="#">Facebook</a></li>
+              <li><a href="#">Twitter</a></li>
+              <li><a href="#">Instagram</a></li>
+             
+            </ul>
+        </div>
+    
+    </div>
+</footer>
+
+ 
+  <script type="text/javascript" src="vendors/js/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="vendors/bootstrap/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
+</body>
+
 </html>
