--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
   <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/footer.css">
 </head>
 
 <body>
@@ -144,7 +144,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-route.min.js"></script>
   <script type="text/javascript" src="vendors/js/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="vendors/bootstrap/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript" src="js/angular.js"></script>
 </body>
 
 </html>
