--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,6 @@
       <div class="row">
         <div class="col-xs-12 col-md-6">
           <div class="" id="section-items">
-<img src="" alt="">
           </div>
 
         </div>
@@ -56,7 +55,14 @@
 
 
     <script type="text/javascript" src="vendors/js/jquery-3.2.1.min.js"></script>
+    <script src="vendors/js/handlebars-v4.0.11.js"></script>
     <script type="text/javascript" src="vendors/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script id="item-arts" type="text/x-handlebars-template">
+
+    <li>{{title}}</li>
+
+
+    </script>
   </body>
 </html>
