--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html ng-app="myApp">
   <head>
     <meta charset="utf-8">
@@ -109,6 +110,7 @@
       </div>
 
   </div>
+  
 </footer>
 
 
@@ -119,16 +121,19 @@
     <script type="text/javascript" src="vendors/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/angular.js"></script>
-     <script id="item-arts" type="text/x-handlebars-template">
+    <script id="item-arts" type="text/x-handlebars-template">
        <div class="col-xs-6 col-md-4">
 
 
        <div class="panel panel-default">
-  <div class="panel-body">
-<p>{{title}}</p>
-  </div>
-  <div class="panel-footer">Panel footer</div>
-</div>
+        <div class="panel-body">
+          <p>{{title}}</p>
+          <div><img src="{{imagen}}" alt=""> </div>
+          <p>{{cantidad}} x s/ . {{plazo}} </p>
+        </div>
+        <div class="panel-footer">Panel footer</div>
+        <p> s/.{{precio}}</p>
+      </div>
 
  </div>
 
