--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,8 @@
         </div>
       </div>
     </section>
+<!--prueba-->
+
 
 <!-- ...........footer................ -->
 <footer class="footer-bs">
@@ -110,7 +112,7 @@
       </div>
 
   </div>
-  
+
 </footer>
 
 
@@ -118,21 +120,25 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-route.min.js"></script>
     <script type="text/javascript" src="vendors/js/jquery-3.2.1.min.js"></script>
     <script src="vendors/js/handlebars-v4.0.11.js"></script>
+    <script src="vendors/js/minicart.js"></script>
+
     <script type="text/javascript" src="vendors/bootstrap/js/bootstrap.min.js"></script>
+      <script type="text/javascript" src="js/paypal.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/angular.js"></script>
+
     <script id="item-arts" type="text/x-handlebars-template">
        <div class="col-xs-6 col-md-4">
-
 
        <div class="panel panel-default">
         <div class="panel-body">
           <p>{{title}}</p>
           <div><img src="{{imagen}}" alt=""> </div>
           <p>{{cantidad}} x s/ . {{plazo}} </p>
-        </div>
+          <a href="#" class="btn btn-primary producto" precio="{{precio}}" titulo="{{title}}"role="button">Add a Carrito</a>
         <div class="panel-footer">Panel footer</div>
         <p> s/.{{precio}}</p>
+
       </div>
 
  </div>
