--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <nav class="navbar navbar-inverse">
       <a class="navbar-brand" href="#">Tienda Online</a>
     </nav>
+    <button class="comprame">comprame</button>
     <section>
       <div class="container-fluid">
         <div class="row">
