--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-inverse">
       <a class="navbar-brand" href="#">Tienda Online</a>
     </nav>
-    <button class="comprame">comprame</button>
+    <button type="button" class="btn btn-info btn-lg comprame">Compra via Stripe!</button>
     <section>
       <div class="container-fluid">
         <div class="row">
@@ -146,6 +146,7 @@
     <script type="text/javascript" src="js/tech.js"></script>
 
 
+    
     <script id="item-arts" type="text/x-handlebars-template">
        <div class="col-xs-6 col-md-4">
 
@@ -155,6 +156,7 @@
           <div><img src="{{imagen}}" alt=""> </div>
           <p>{{cantidad}} x s/ . {{plazo}} </p>
           <a href="#" class="btn btn-primary producto" precio="{{precio}}" titulo="{{title}}"role="button">Add a Carrito</a>
+          
         <div class="panel-footer">Panel footer</div>
         <p> s/.{{precio}}</p>
 
