--- a/public/index.html
+++ b/public/index.html
@@ -144,6 +144,8 @@
 
     <script type="text/javascript" src="js/moda.js"></script>
     <script type="text/javascript" src="js/tech.js"></script>
+    <script type="text/javascript" src="js/makeup.js"></script>
+    <script type="text/javascript" src="js/art.js"></script>
 
 
     
