--- a/public/index.html
+++ b/public/index.html
@@ -3,174 +3,212 @@
 <html ng-app="myApp">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPA</title>
-    <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
     <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/footer.css">
-
   </head>
   <body>
-    <nav class="navbar navbar-inverse">
-      <a class="navbar-brand" href="#">Tienda Online</a>
+    <!-- navbar-->
+    <nav class="navbar navbar-default navbar-inverse navbar-color">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#"><i class="fas fa-phone-volume"></i>(00) 000 131 222</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="#">En1click@gmail.com</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#"><i class="fas fa-user"></i>My account</a></li>
+            <!-- botón para hacer la compra con stripe-->
+             <button type="button" class="btn stripe btn-lg comprame right-block">Compra via Stripe!</button>
+          </ul>
+        </div>
+      </div>
     </nav>
-    <button type="button" class="btn btn-info btn-lg comprame">Compra via Stripe!</button>
-    <section>
+    <!-- sección del logo-->
+    <section class="title">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-xs-6">
-            <!-- <img src="assets/images/tienda.png" alt="online"> -->
-            <script type="text/ng-template" id="pages/home.html">
-              <h1>Lo último</h1>
-              <h3>{{message}}</h3>
-              <img src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22200%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20200%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_161c99560f2%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_161c99560f2%22%3E%3Crect%20width%3D%22200%22%20height%3D%22200%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2274.4296875%22%20y%3D%22104.5%22%3E200x200%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E">
-              <input type="email" class="form-control" id="search" placeholder="Ingresa lo que quieres comprar:sandalia">
-            <button type="submit" class="btn btn-default" id="send">Send</button>
-            <div class="container-fluid">
-              <div class="row" id="section-items">
-
-              </div>
-
-            </div>
-
-
-            </script>
-            <script type="text/ng-template" id="pages/moda.html">
-              <h1>Moda</h1>
-              <h3>{{message}}</h3>
-              <div id="response-moda"></div>
-            </script>
-            <script type="text/ng-template" id="pages/tech.html">
-              <h1>Tecnología</h1>
-              <h3>{{message}}</h3>
-              <div id="response-tech"></div>
-
-            </script>
-            <script type="text/ng-template" id="pages/art.html">
-              <h1>Artículos de colección y arte</h1>
-              <h3>{{message}}</h3>
-              <img src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22200%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20200%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_161c99560f2%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_161c99560f2%22%3E%3Crect%20width%3D%22200%22%20height%3D%22200%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2274.4296875%22%20y%3D%22104.5%22%3E200x200%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E">
-
-            </script>
-
-            <a href="#/">Lo último</a>
-            <a id="moda" href="#/moda">Moda</a>
-            <a id="tech" href="#/tech">Tecnología</a>
-            <a href="#/art">Artículos de colección y arte</a>
-
-            <div ng-view></div>
+          <div class="col-xs-12">
+            <h1 class="text-center"><img src="assets/images/icon.PNG" alt="icon">En 1 click<img src="assets/images/icon.PNG" alt="icon"></h1>
           </div>
         </div>
       </div>
     </section>
-<!--prueba-->
+    <!-- sección del carrusel-->
+    <section>
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        </ol>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <img src="assets/images/primero1.jpg" alt="carusel">
+            <div class="carousel-caption">
+              <h1>¡Encuentra lo ropa que quieras!</h1>
+            </div>
+          </div>
+          <div class="item">
+            <img src="assets/images/tercero8.jpeg" alt="carusel">
+            <div class="carousel-caption">
+              <h1>También los dispositivos electrónicos que desees</h1>
+            </div>
+          </div>
+          <div class="item">
+            <img src="assets/images/cuarto3.jpg" alt="carusel">
+            <div class="carousel-caption">
+              <h1>Y más</h1>
+            </div>
+          </div>
+        </div>
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+      <!-- menu-->
+      <section class="menu">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-xs-12">
+              <a href="#/"><i class="fas fa-home"></i>HOME</a>
+              <a id="moda" href="#/moda">Moda</a>
+              <a id="tech" href="#/tech">Tecnología</a>
+              <a href="#/art">Artículos de colección y arte</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- script para pestaña home-->
+      <script type="text/ng-template" id="pages/home.html">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
+              <h3 class="text-center">{{message}}</h3>
+              <input type="email" class="form-control" id="search" placeholder="Ingresa lo que quieres comprar:sandalia">
+              <button type="submit" class="btn btn-default btn-lg center-block btn-send" id="send">Send</button>
+            </div>
+          </div>
+          <div class="row" id="section-items">
+          </div>
+        </div>
+      </script>
+      <!-- template en la vista home para incorporar los artículos solicitados-->
+      <script id="item-arts" type="text/x-handlebars-template">
+        <div class="col-xs-6 col-md-3">
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <p class="text-center">{{title}}</p>
+              <img src="{{imagen}}" alt="item" class="center-block">
+              <p class="text-center">Plazos: {{cantidad}}cuotas x S/. {{plazo}} </p>
+              <div class="panel-footer"><p class="text-center">Precio: S/.{{precio}}</p>
+                <a href="#" class="btn btn-primary producto center-block" precio="{{precio}}" titulo="{{title}}"role="button">Añadir al carrito</a>
+              </div>
+            </div>
+          </div>
+        </script>
 
-
-
-    <!-- Modal -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-          <div class="modal-content">
+        <!-- script para pestaña moda-->
+        <script type="text/ng-template" id="pages/moda.html">
+          <h1>Moda</h1>
+          <h3>{{message}}</h3>
+          <div id="response-moda"></div>
+        </script>
+        <!-- script para pestaña tecnología-->
+        <script type="text/ng-template" id="pages/tech.html">
+          <h1>Tecnología</h1>
+          <h3>{{message}}</h3>
+          <div id="response-tech"></div>
+        </script>
+        <!-- script para pestaña arte-->
+        <script type="text/ng-template" id="pages/art.html">
+          <h1>Artículos de colección y arte</h1>
+          <h3>{{message}}</h3>
+        </script>
+        <div ng-view></div>
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
               <div class="modal-header">
-                  <h5 class="modal-title" id="myModalLabel"></h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                  </button>
+                <h5 class="modal-title" id="myModalLabel"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
               </div>
               <div class="modal-body">
-
               </div>
               <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
               </div>
+            </div>
           </div>
-      </div>
-  </div>
-  <!-- Fin modal -->
-<!-- ...........footer................ -->
-<footer class="footer-bs">
-  <div class="row">
-    <div class="col-md-5 footer-brand animated fadeInLeft">
-        <h2>Logo</h2>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet corrupti nemo perferendis, nobis eos veritatis debitis deserunt consequatur consequuntur, qui velit. Assumenda commodi sint dolorum qui dignissimos impedit, quasi voluptate.Consequatur delectus cum veniam non, soluta nihil debitis ipsam sint et? Esse, ullam delectus. Dignissimos itaque eius nihil minima pariatur laboriosam optio saepe, officiis, velit at adipisci reprehenderit voluptas commodi.</p>
-          <p>© 2018 Todos los derechos reservados</p>
-      </div>
-    <div class="col-md-5 footer-nav animated fadeInUp">
-        <h4>Menu —</h4>
-        <div class="col-md-6">
-              <ul class="pages">
-                  <li><a href="#">Lo ùltimo</a></li>
-                  <li><a href="#">Moda</a></li>
-                  <li><a href="#">Tecnologìa</a></li>
-                  <li><a href="#">Artìculos de colecciòn y arte</a></li>
-                  <li><a href="#">...</a></li>
-              </ul>
+        </div>
+        <!-- Fin modal -->
+        <!-- .footer -->
+        <footer class="footer-bs">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-6">
+                <img src="assets/images/icon.PNG" alt="icon" class="center-block">
+                <h1 class="">En 1 click</h1>
+                  <p>© 2018 Todos los derechos reservados</p>
+              </div>
+              <div class="col-xs-6">
+                <ul class="list">
+                    <li><a href="#">Sobre Nosotros</a></li>
+                    <li><a href="#">Contactos</a></li>
+                    <li><a href="#">Terminos & Condiciones</a></li>
+                    <li><a href="#">Polìtica de Privacidad</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-12">
+                <h4>Síguenos</h4>
+                <ul class="icons">
+                  <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                  <li><a href="https://twitter.com/?lang=es" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+                  <li><a href="https://www.instagram.com/?hl=es-la"><i class="fab fa-instagram" target="_blank"></i></a></li>
+                </ul>
+              </div>
+            </div>
           </div>
-        <div class="col-md-6">
-              <ul class="list">
-                  <li><a href="#">Sobre Nosotros</a></li>
-                  <li><a href="#">Contactos</a></li>
-                  <li><a href="#">Terminos & Condiciones</a></li>
-                  <li><a href="#">Polìtica de Privacidad</a></li>
-              </ul>
-          </div>
-      </div>
-    <div class="col-md-2 footer-social animated fadeInDown">
-        <h4>Síguenos</h4>
-        <ul>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Instagram</a></li>
-
-          </ul>
-      </div>
-
-  </div>
-
-</footer>
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-route.min.js"></script>
-    <script type="text/javascript" src="vendors/js/jquery-3.2.1.min.js"></script>
-    <script src="vendors/js/handlebars-v4.0.11.js"></script>
-    <script src="vendors/js/minicart.js"></script>
-
-    <script type="text/javascript" src="vendors/bootstrap/js/bootstrap.min.js"></script>
-      <script type="text/javascript" src="js/paypal.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/angular.js"></script>
-
-
-    <!--<script type="text/javascript" src="js/moda.js"></script>
-    <script type="text/javascript" src="js/tech.js"></script>-->
-
-
-    <script type="text/javascript" src="js/moda.js"></script>
-    <script type="text/javascript" src="js/tech.js"></script>
-    <script type="text/javascript" src="js/makeup.js"></script>
-    <script type="text/javascript" src="js/art.js"></script>
-
-
-    
-    <script id="item-arts" type="text/x-handlebars-template">
-       <div class="col-xs-6 col-md-4">
-
-       <div class="panel panel-default">
-        <div class="panel-body">
-          <p>{{title}}</p>
-          <div><img src="{{imagen}}" alt=""> </div>
-          <p>{{cantidad}} x s/ . {{plazo}} </p>
-          <a href="#" class="btn btn-primary producto" precio="{{precio}}" titulo="{{title}}"role="button">Add a Carrito</a>
-          
-        <div class="panel-footer">Panel footer</div>
-        <p> s/.{{precio}}</p>
-
-      </div>
-
- </div>
-
-    </script>
-  </body>
-</html>
+        </footer>
+        <!-- dependencias-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-route.min.js"></script>
+        <!-- librería para el template-->
+        <script src="vendors/js/handlebars-v4.0.11.js"></script>
+        <!-- plugin para adionar paypal-->
+        <script src="vendors/js/minicart.js"></script>
+        <script type="text/javascript" src="vendors/js/jquery-3.2.1.min.js"></script>
+        <script type="text/javascript" src="vendors/bootstrap/js/bootstrap.min.js"></script>
+        <!-- funcionalidad-->
+        <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript" src="js/angular.js"></script>
+        <script type="text/javascript" src="js/moda.js"></script>
+        <script type="text/javascript" src="js/makeup.js"></script>
+        <script type="text/javascript" src="js/art.js"></script>
+      </body>
+    </html>
